# pcv

./: .gitignore  LICENSE  README.md  demo.R  demo.m
Augmentation/: Heart.csv  Heart.ipynb  README.md  Tecator.csv  Tecator.ipynb
Javascript/: README.md  package.json
MATLAB/: Procrustes cross-validation.mltbx  README.md  demo.m  getxpvorth.m  nirsim.mat  pcv.m  pcv.prj  pcvpca.m  pcvpcaTest.m  pcvpcr.m  pcvpcrTest.m  pcvpls.m  pcvplsTest.m  pcvreg.m  testold.m
PCVMATLAB/: Procrustes cross-validation.mltbx  corn.mat  crossval.m  pcv.m  pcv.prj  pcvpca.m  pcvpcaTest.m  pcvpcr.m  pcvpcrTest.m  pcvpls.m  pcvreg.m  simpls.m
PCVR/: DESCRIPTION  NAMESPACE  corn.RData  pcv.R  pcvold.R  test.R  testold.R
Python/: README.md  pyproject.toml
Python/demo/: corn.csv  demo.ipynb  demo.py  misc.py
Python/src/pcv/: methods.py  misc.py  pcvpca.py
Python/tests/: common.py  test_misc.py  test_pcvpca.py  test_pcvpcr.py  test_pcvpls.py
R/: .Rbuildignore  DESCRIPTION  LICENSE  README.md  demo.R  demoold.R  nirsim.RData  pcv.R  test.R
References/: Hpvg-1-FALSE-FALSE-rand10.csv  Hpvg-1-FALSE-TRUE-loo.csv  Hpvg-1-FALSE-TRUE-rand10.csv  Hpvg-1-FALSE-TRUE-ven10.csv  Hpvg-1-FALSE-TRUE-ven4.csv  Hpvg-1-TRUE-FALSE-rand10.csv  Hpvg-1-TRUE-FALSE-ven10.csv  Hpvg-1-TRUE-TRUE-rand10.csv  Hpvg-10-FALSE-FALSE-rand10.csv  Hpvg-10-FALSE-FALSE-ven4.csv  Hpvg-10-FALSE-TRUE-rand10.csv  Hpvg-10-FALSE-TRUE-ven10.csv  Hpvg-10-TRUE-FALSE-rand10.csv  Hpvg-10-TRUE-FALSE-ven10.csv  Hpvg-10-TRUE-FALSE-ven4.csv  Hpvg-10-TRUE-TRUE-rand10.csv  Hpvg-20-FALSE-FALSE-rand10.csv  Hpvg-20-FALSE-TRUE-rand10.csv  (+105 more)
(+413 files in other folders)
