[build-system]
requires = ["hatchling", "numpy"]
build-backend = "hatchling.build"

[project]
name = "pcv"
version = "1.0.0"
authors = [
  { name="Sergey Kucheryavskiy", email="svkucheryavski@gmail.com" },
]
description = "Implementation of Procrustes cross-validation in Python"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/svkucheryavski/pcv"
"Bug Tracker" = "https://github.com/svkucheryavski/pcv/issues"
