[build-system]
requires = ["hatchling", "numpy", "scipy"]
build-backend = "hatchling.build"

[project]
name = "prcv"
version = "1.1.0"
authors = [
  { name="Sergey Kucheryavskiy", email="svkucheryavski@gmail.com" },
]
description = "Implementation of Procrustes cross-validation in Python"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/svkucheryavski/pcv"
"Bug Tracker" = "https://github.com/svkucheryavski/pcv/issues"
